--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.anonymous.Friendify"
     },
     "web": {
       "favicon": "./assets/favicon.png"
